--- a/Plastic Soep/Assembly-CSharp.csproj
+++ b/Plastic Soep/Assembly-CSharp.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Assets\Scripts\Managers\ScoreManager.cs" />
     <Compile Include="Assets\Scripts\Managers\WaterManager.cs" />
     <Compile Include="Assets\Scripts\Port.cs" />
+    <Compile Include="Assets\Scripts\Selectable.cs" />
     <Compile Include="Assets\Scripts\SelectCircle.cs" />
     <Compile Include="Assets\Scripts\Spawner.cs" />
     <Reference Include="Unity.RenderPipelines.Core.Editor">
